Add packaging icons for Arma3Sync